[package]
name = "sybil-pow"
version = "0.1.0"
edition = "2018"

[dependencies]
codec = { version = "2.2.0", package = "parity-scale-codec" }
sc-consensus-pow = { git  = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus-pow = { git  = "https://github.com/paritytech/substrate.git", branch = "master" }

sp-runtime = { git  = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { git  = "https://github.com/paritytech/substrate.git", branch = "master" }
sha3 = "0.9.1"