[package]
name = "sybil-runtime"
version = "3.0.0"
authors = ["Polytope Labs"]
edition = "2018"
license = "Unlicense"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

pallet-aura = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
pallet-balances = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
pallet-grandpa = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
pallet-randomness-collective-flip = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
pallet-sudo = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
pallet-timestamp = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
pallet-transaction-payment = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

frame-support = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
frame-system = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
frame-executive = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
difficulty = { default-features = false, package = "frame-difficulty", path = "../frame/difficulty" }

sp-api = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-block-builder = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-consensus-pow = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-core = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-inherents = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-offchain = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-runtime = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-session = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-std = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-transaction-pool = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
sp-version = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false, optional = true }
frame-system-benchmarking = { git  = "https://github.com/paritytech/substrate.git", branch = "master", default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }

[build-dependencies]
substrate-wasm-builder = { git  = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"difficulty/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-pow/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
